recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:12: error: not found: value level
  if (level==0){
      ^Koch:16: error: not found: value level
    snowSide(level-1,length)
             ^